Upgrade dependencies. Prepare 1.5.0  release
Entire-Checkpoint: 37abb99fe6a7
